--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tyler",
   "version": "0.0.0",
   "description": "Metro-style tiling UI implemented in CSS",
-  "main": "js/tyler.js",
+  "main": "coffee/tyler.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git@github.com:eighttrackmind/tyler.git"
   },
-  "author": "",
+  "author": "Boris Cherny <boris@performancejs.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/eighttrackmind/tyler/issues"
