--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tyler",
   "version": "0.1.0",
-  "description": "Metro-style tiling UI implemented in CSS",
-  "main": "js/tyler.js",
+  "description": "Metro-style tiling UI implemented in CSS and CoffeeScript",
+  "main": "tyler.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:eighttrackmind/tyler.git"
